--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
       </ul>
     </div>
   </nav>
+
+  <!-- Admin Actions -->
+  <form class="center-align admin-actions" style="margin: 40px auto; max-width: 300px;">
+  <input type="email" placeholder="User email" id="admin-email" required />
+  <button class="btn-small yellow darken-2 z-depth-0">Make admin</button>
+  </form>
   <!-- SIGN UP MODAL -->
   <div id="modal-signup" class="modal">
     <div class="modal-content">
@@ -104,6 +110,7 @@
 <script src="https://www.gstatic.com/firebasejs/5.8.3/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.8.3/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.8.3/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.8.3/firebase-functions.js"></script>
 <script>
     // Initialize Firebase
     var config = {
@@ -119,6 +126,7 @@
     //make auth and firestore references
     const auth = firebase.auth();
     const db = firebase.firestore();
+    const functions = firebase.functions();
 
     //update firestore settings
     db.settings({ timestampsInSnapshots: true });
