Began implementing Algolia

--- a/index.html
+++ b/index.html
@@ -130,13 +130,15 @@
     <ul class="collapsible z-depth-0 guides" style="border: none;">
     </ul>
   </div>
-  
+<!--Scripts for Angolia-->
+<!--<script type='text/javascript' src='config.js'></script>-->
+<!--<script type='text/javascript' src='scripts/index.js'></script>-->
 <script src="https://www.gstatic.com/firebasejs/5.8.3/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.8.3/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.8.3/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.8.3/firebase-functions.js"></script>
 <script>
-    // Initialize Firebase
+    // Initialize Firebase - changed variable 'config' to 'configfirebase'
     var config = {
         apiKey: "AIzaSyD4q6B_KYEcBPrHcH-D1_eE_nWcBcIiYdw",
         authDomain: "volorg2.firebaseapp.com",
